Awards Details fix
By taking the overflow property out of the owl carousel and putting it instead on the page border, it fixed the details not appearing. Also adjusted the dimensions of the details containers to make inside items not overflow. Adjusted the arrow psuedo element to position it in the middle. Added an invisible before element to extend the hitbox of the hover so it's easier to put cursor on the awards details.

--- a/scss/partials/_components.scss
+++ b/scss/partials/_components.scss
@@ -985,7 +985,6 @@ a {
     border-radius: 3px;
     line-height: 35px;
     margin-top: 11px;
-    margin-bottom: 40px;
 }
 
 #girlGuidingrInfo a{
