--- a/scss/partials/_text.scss
+++ b/scss/partials/_text.scss
@@ -304,7 +304,7 @@ button {
 
 .accreditationsDetails p {
     line-height: 26px;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
 }
 
 .accreditationsDetails a {
