--- a/scss/partials/layout/_mainNavBar.scss
+++ b/scss/partials/layout/_mainNavBar.scss
@@ -1,3 +1,7 @@
+#bigContainer {
+    overflow: hidden;
+}
+
 .mainNavBar {
     background-color: #333645;
     display: none;
